Adding Envoy Admin port to config - users might have changed in istio

--- a/roles/default/kiali-deploy/defaults/main.yml
+++ b/roles/default/kiali-deploy/defaults/main.yml
@@ -135,6 +135,7 @@ kiali_defaults:
           namespace: ""
       config_map_name: "istio"
       envoy_admin_local_port: 15000
+      envoy_admin_target_port: 15000
       istio_identity_domain: "svc.cluster.local"
       istio_injection_annotation: "sidecar.istio.io/inject"
       istio_sidecar_annotation: "sidecar.istio.io/status"
